<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/create_account"
        android:layout_width="173dp"
        android:layout_height="87dp"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681" />

    <EditText
        android:id="@+id/inputEmailAddress"
        android:layout_width="242dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textNoSuggestions|textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29"
        android:autofillHints=""
        android:maxLength="50"/>

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="242dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textNoSuggestions|textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        android:autofillHints=""
        android:maxLength="50"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="242dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textNoSuggestions|textPassword"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523"
        android:autofillHints=""
        android:maxLength="60"/>

    <TextView
        android:id="@+id/messageBox"
        android:layout_width="157dp"
        android:layout_height="54dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />
</androidx.constraintlayout.widget.ConstraintLayout>